# redpen

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.coco-plugin/: marketplace.json
.github/workflows/: deploy-telemetry.yml  release.yml
assets/codex-app/: renderer-inject.js
crates/redpen-codex-app/: Cargo.toml
crates/redpen-codex-app/src/: main.rs
docs/superpowers/plans/: 2026-05-26-redpen-codex.md
docs/superpowers/specs/: 2026-05-26-codex-research.md  2026-05-26-codex-verification.md  2026-05-26-redpen-codex-design.md
packaging/codex-app/: build.sh  crop_top.swift  dmgbuild-settings.py  make-dmg.sh  make-icon.sh  wrapper.applescript
plugins/language-tutor/.claude-plugin/: plugin.json
plugins/language-tutor/commands/: setup.md
plugins/language-tutor/hooks/: grammar_check.sh  hooks.json  prewarm.sh
plugins/redpen-coco/: coco.yaml
plugins/redpen-coco/.claude-plugin/: plugin.json
plugins/redpen-coco/commands/: setup.md
plugins/redpen-coco/hooks/: grammar_check.sh  probe_styling.sh
plugins/redpen-coco/shared/: coach_prompts.sh  render_diff.py
plugins/redpen-codex/.codex-plugin/: plugin.json
plugins/redpen-codex/hooks/: grammar_check.sh  hooks.json
plugins/redpen-codex/shared/: coach_codex.sh  coach_prompts.sh  render_diff.py
plugins/redpen/.claude-plugin/: plugin.json
plugins/redpen/commands/: setup.md
plugins/shared/: coach_prompts.sh  render_diff.py
scripts/: install-codex-app.sh
telemetry/: README.md  worker.js  wrangler.toml
(+4 files in other folders)
